Fix exit section alignment by ensuring margin-right is set to auto

--- a/src/components/Profile/ProfileInfo.module.scss
+++ b/src/components/Profile/ProfileInfo.module.scss
@@ -31,6 +31,7 @@
     }
     
     &_exit{
+        margin-right: auto;
         display: flex;
         align-items: center;
         height: 80px;
